# pixeli

./: CHANGELOG.md  Cargo.toml  README.md
src/: abgr.rs  argb.rs  bgr.rs  bgra.rs  conversions.rs  from.rs  from_pixel_common.rs  gray.rs  gray_alpha.rs  grb.rs  lib.rs  pixel.rs  rgb.rs  rgba.rs  with_alpha.rs
src/from_pixel_common/: enlargeable.rs  from_component_common.rs  mod.rs  to_gray.rs  to_rgb.rs
src/pixel/: as_slice.rs  mod.rs  pixel_component.rs
