[package]
name = "pixeli"
version = "0.1.0"
authors = ["James Forster <james.forsterer@gmail.com>"]
edition = "2021"
description = """
This crate provides common pixel types and traits for working with
them.
"""
documentation = "https://docs.rs/pixeli"
readme = "README.md"
homepage = "https://github.com/ripytide/pixeli"
repository = "https://github.com/ripytide/pixeli"
license = "MIT"
keywords = ["pixel", "pixels"]
categories = ["imageprocessing"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
	"derive",
] }
libm = { version = "0.2.8", optional = true, default-features = false }

[features]
default = ["libm"]
serde = ["dep:serde"]
libm = ["dep:libm"]

[lints.rust]
missing_docs = "deny"
